manifests/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
spec:
  selector:
    app.kubernetes.io/name: headlamp
  ports:
    - name: http
      port: 80
      targetPort: http
